# algorithms-cpp

./: CMakeLists.txt  Logic.cpp  Logic.h  README.md  main.cpp  symbols.h
logic/: Implicant.cpp  Implicant.h  McCluskey.cpp  McCluskey.h  VeitchDiagram.cpp  VeitchDiagram.h  symbols.h
numeric/: Numeric.cpp  Numeric.h  NumericGeneral.cpp  NumericGeneral.h
programs/: McCluskeyProg.cpp  McCluskeyProg.h  Program.cpp  Program.h  minimize.cpp  minimize.h  program.cpp  program.h  veitch.cpp  veitch.h
test/: McCluskeyTest.cpp  McCluskeyTest.h  VeitchDiagramTest.cpp  VeitchDiagramTest.h  common.sh  test_launch.sh  test_minimize.cpp  test_minimize.h  test_minimize.sh  test_veitch.cpp  test_veitch.sh
